# Casto-rs

./: Cargo.toml  README.md
contract/: Cargo.toml
contract/src/: lib.rs
contract/src/passes/: mod.rs
core/: Cargo.toml
core/src/: lib.rs
provider/: Cargo.toml
